- Attach Xmp data to EXR files
- Several fixes for HighDPI displays
- Use Pango for text layout, thus supporting RTL languages
- Feathering size in some mask shapes can be set with shift+scroll
- Many bugs got fixed and some memory leaks plugged
- The usermanual was updated to reflect the changes in the 2.2 series
- Tone curve: mode "automatic in XYZ" mode for "scale chroma"

Changed Dependencies:

- CMake 3.0 is now required.
- In order to compile darktable you now need at least gcc-4.7+/clang-3.3+, but better use gcc-5.0+
- Drop support for OS X 10.6
- Bump required libexiv2 version up to 0.24
- Bump GTK+ requirement to gtk-3.14. (because even debian stable has it)
- Bump GLib requirement to glib-2.40.
- Port to OpenJPEG2
- SDL is no longer needed.

Base Support

- Canon EOS-1D X Mark II
- Canon EOS 5D Mark IV
- Canon EOS 80D
- Canon EOS 1300D
- Canon EOS Kiss X80
- Canon EOS Rebel T6
- Canon EOS M10
- Canon PowerShot A720 IS (dng)
- Canon PowerShot G7 X Mark II
- Canon PowerShot G9 X
- Canon PowerShot SD450 (dng)
- Canon PowerShot SX130 IS (dng)
- Canon PowerShot SX260 HS (dng)
- Canon PowerShot SX510 HS (dng)
- Fujifilm FinePix S100FS
- Fujifilm X-Pro2
- Fujifilm X-T2
- Fujifilm X70
- Fujifilm XQ2
- GITUP GIT2 (chdk-a, chdk-b)
- (most nikon cameras here are just fixes, and they were supported before already)
- Nikon 1 AW1 (12bit-compressed)
- Nikon 1 J1 (12bit-compressed)
- Nikon 1 J2 (12bit-compressed)
- Nikon 1 J3 (12bit-compressed)
- Nikon 1 J4 (12bit-compressed)
- Nikon 1 J5 (12bit-compressed, 12bit-uncompressed)
- Nikon 1 S1 (12bit-compressed)
- Nikon 1 S2 (12bit-compressed)
- Nikon 1 V1 (12bit-compressed)
- Nikon 1 V2 (12bit-compressed)
- Nikon 1 V3 (12bit-compressed, 12bit-uncompressed)
- Nikon Coolpix A (14bit-compressed)
- Nikon Coolpix P330 (12bit-compressed)
- Nikon Coolpix P340 (12bit-compressed, 12bit-uncompressed)
- Nikon Coolpix P6000 (12bit-uncompressed)
- Nikon Coolpix P7000 (12bit-uncompressed)
- Nikon Coolpix P7100 (12bit-uncompressed)