@@ -32,6 +32,7 @@
 // 1.6 was 2.0.1
 // 1.6.1 was 2.0.2
 // 2.0.0 was 3.0.0
+// 2.2.0 was 4.0.0
 /* incompatible API change */
 #define LUA_API_VERSION_MAJOR 4
 /* backward compatible API change */
@@ -39,7 +40,7 @@
 /* bugfixes that should not change anything to the API */
 #define LUA_API_VERSION_PATCH 0
 /* suffix for unstable version */
-#define LUA_API_VERSION_SUFFIX "dev"
+#define LUA_API_VERSION_SUFFIX ""
 
 /** initialize lua stuff at DT start time */
 int dt_lua_init_configuration(lua_State *L);
